# Currently bazel-lib is only load()ed when platforms is used.
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", repo_name = None)  # force a recent version that works with v3
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "aspect_rules_lint", version = "2.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0")

# We have to take a dependency on rules_python in order to set bootstrap=script
# for transitive dependencies, even if there are no Python rules used in this repo.
# See .bazelrc
bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "gazelle", version = "0.47.0")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

#########################
# Protobuf and gRPC
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "protovalidate", version = "1.0.0")

# Force later resolutions of some transitives to pick up Bazel 9 fixes
bazel_dep(name = "rules_foreign_cc", version = "0.15.1", repo_name = None)
bazel_dep(name = "grpc-java", version = "1.78.0")
bazel_dep(name = "bazel_jar_jar", version = "0.1.12", repo_name = None)

#########################
# Java and other JVM languages
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# In the Maven support variation, the dependencies are conveniently listed here
# in the MODULE.bazel file.
maven.install(
    artifacts = ["io.grpc:grpc-all:1.51.1"],
    lock_file = "//:maven_install.json",
)
use_repo(
    maven,
    "maven",
    "unpinned_maven",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "net_sourceforge_pmd",
    build_file_content = "\n".join([
        """load("@rules_java//java:java_import.bzl", "java_import")""",
        """java_import(name = "net_sourceforge_pmd", jars = glob(["*.jar"]), visibility = ["//visibility:public"])""",
    ]),
    integrity = "sha256-vov2j2wdZphL2WRak+Yxt4ocL0L18PhxkIL+rWdVOUA=",
    strip_prefix = "pmd-bin-7.7.0/lib",
    url = "https://github.com/pmd/pmd/releases/download/pmd_releases/7.7.0/pmd-dist-7.7.0-bin.zip",
)

register_toolchains("//tools/toolchains:all")
